<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OtpActivity"
    android:orientation="vertical"
    android:background="@color/colorGray">

    <include
        android:id="@+id/toolBar"
        layout="@layout/layout_toolbar" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_4sdp"
        android:layout_margin="@dimen/_12sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:paddingBottom="@dimen/_12sdp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUserInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/rounded_white_bg_square"
                android:padding="@dimen/_12sdp"
                android:maxLines="1"
                android:singleLine="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/choose_one_shape_in_which_you_want_to_display_otp"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/rgShape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rgLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/line"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rgSquare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/square"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rgCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/circle"
                    android:textColor="@color/black" />

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go_to_otp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="@dimen/_20sdp"
                android:textColor="@color/black"
                android:paddingStart="@dimen/_32sdp"
                android:paddingEnd="@dimen/_32sdp"
                android:textSize="@dimen/_13ssp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:background="@color/colorGray"
                android:textAllCaps="true"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>